k8s/base/networking/misc-ingresses/home-srv-livetv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livetv
  namespace: networking
  annotations:
    auth-fi.home.arpa/enabled: "true"
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://10.0.0.56:40119/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://sso.${MAIN_DOMAIN}?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Groups
    nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
    external-dns-cf/is-dns-public: "true"
    external-dns.target/enabled: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: "tv.${MAIN_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: tvheadend-home-srv
                port:
                  number: 9981
            path: '/'
            pathType: Prefix
  tls:
    - hosts:
        - "tv.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
