k8s/base/networking/misc-ingresses/nas-ingress-and-service.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas
  namespace: networking
  annotations:
    external-dns-cf/is-public-dns: "true"
    external-dns-cf/is-public: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: "nas.${MAIN_DOMAIN}"
      http:
        paths:
          - backend:
              service:
               name: nas
               port:
                 number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "nas.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-2
  namespace: networking
  annotations:
    external-dns-cf/is-public-dns: "true"
    external-dns-cf/is-public: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: "nas.${MAIN_DOMAIN_2}"
      http:
        paths:
          - backend:
              service:
                name: nas
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "nas.${MAIN_DOMAIN_2}"
      secretName: ${MAIN_DOMAIN_2}-tls
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: networking
spec:
  ports:
    - name: http
      port: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.2.2
    ports:
      - port: 5000
